# SimpleTierlist

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/api/: __init__.py  endpoints.py
src/api/routes/: __init__.py  discord_auth.py  table.py
src/crud/: __init__.py  table_crud.py
src/models/: __init__.py  table.py  user.py
src/schemas/: __init__.py  error_response.py  overall_response.py  table_response.py  user_response.py
src/services/discord/: __init__.py  client.py  oauth.py
src/settings/: __init__.py  base.py
static/: script.js  style.css
templates/: index.html
